--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
         </div>
     </div>
     <div class="quotes">
-        <div class="quote"> This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</div>
-        <div class="citation"> -Thor, God Of Thunder</div>
+        <div class="quote-container">
+            <div class="quote"> This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</div>
+            <div class="citation"> -Thor, God Of Thunder</div>
+        </div>
     </div>
     <div class="action">
         <div class="call"> Call to action! It's time!</div>
