--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
     <div class="info">
         <div class="info-title"> Some random information </div>
         <div class="info-contents">
-            <div class="info-box"></div>
+            <div class="info-box">
                 <div class="illustration"></div>
                 <div class="illustration-text">this is some subtext under an illustration of image</div>
             </div>
-            <div class="info-box"></div>
+            <div class="info-box">
                 <div class="illustration"></div>
                 <div class="illustration-text">this is some subtext under an illustration of image</div>
             </div>
-            <div class="info-box"></div>
+            <div class="info-box">
                 <div class="illustration"></div>
                 <div class="illustration-text">this is some subtext under an illustration of image</div>
             </div>
-            <div class="info-box"></div>
+            <div class="info-box">
                 <div class="illustration"></div>
                 <div class="illustration-text">this is some subtext under an illustration of image</div>
             </div>
@@ -54,9 +54,15 @@
         </div>
     </div>
     <div class="action">
-        <div class="call"> Call to action! It's time!</div>
-        <div class="instructions"> Sign up for our product by clicking that button over there!</div>
-        <button type="button">Sign Up</button>
+        <div class="action-container">
+            <div class="action-text">
+                <div class="call"> Call to action! It's time!</div>
+                <div class="instructions"> Sign up for our product by clicking that button over there!</div>
+            </div>
+            <div>
+                <button type="button" class="action-button">Sign Up</button>
+            </div>
+        </div>
     </div>
     <div class="footer"> Copyright © The Odin Project 2021</div>
   </body>
