Completed styling for information panel

--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
         <div class="info-contents">
             <div class="info-box">
                 <div class="illustration"></div>
-                <div class="illustration-text">this is some subtext under an illustration of image</div>
+                <div class="illustration-text">this is some subtext under an illustration or image</div>
             </div>
             <div class="info-box">
                 <div class="illustration"></div>
-                <div class="illustration-text">this is some subtext under an illustration of image</div>
+                <div class="illustration-text">this is some subtext under an illustration or image</div>
             </div>
             <div class="info-box">
                 <div class="illustration"></div>
-                <div class="illustration-text">this is some subtext under an illustration of image</div>
+                <div class="illustration-text">this is some subtext under an illustration or image</div>
             </div>
             <div class="info-box">
                 <div class="illustration"></div>
-                <div class="illustration-text">this is some subtext under an illustration of image</div>
+                <div class="illustration-text">this is some subtext under an illustration or image</div>
             </div>
         </div>
     </div>
