--- a/index.html
+++ b/index.html
@@ -12,19 +12,25 @@
         <div>
             <div class="logo"> Header Logo</div>
         </div>
-        <ul>
-            <li><a href="#"> header link one</a></li>
-            <li><a href="#"> header link two</a></li>
-            <li><a href="#"> header link three</a></li>
-        </ul>
+        <div>
+            <ul>
+                <li><a href="#"> header link one</a></li>
+                <li><a href="#"> header link two</a></li>
+                <li><a href="#"> header link three</a></li>
+            </ul>
+        </div>
     </div>
     <div class="hero">
         <div class="hero-left">
             <div class="main-text"> This website is awesome </div>
             <div class="secondary-text"> This website has some subtext that goes here under the main title. It's a smaller font and the colour is lower contrast </div>
-            <button type="button">Sign up</button>
+            <div>
+                <button type="button">Sign up</button>
+            </div>
         </div>
-        <div class="image-placeholder"></div>
+        <div>
+            <div class="image-placeholder"> this is a placeholder for an image</div>
+        </div>
     </div>
     <div class="info">
         <div class="info-title"> Some random information </div>
